# reqwest-partial-retry

./: Cargo.toml  LICENSE-APACHE  README.md  rustfmt.toml
src/: lib.rs
